fix: header toggle will collapse at any click

--- a/_sass/components/_header.scss
+++ b/_sass/components/_header.scss
@@ -270,14 +270,14 @@ $height_header: map-get($layout, header-height) - $height_header_top;
       top: $height_header_top + $height_header;
       right: 0;
       width: 100%;
-      height: 0;
-      @include transition(height .2s ease);
+      max-height: 0;
+      @include transition(max-height .2s ease);
       overflow-y: auto;
       @include scrollbar-none;
+      @include box-shadow(2);
       > ul {
         height: auto;
         background: transparent;
-        @include box-shadow(2);
         @include menu-direction(vertical);
         > li {
           width: 100%;
@@ -300,7 +300,7 @@ $height_header: map-get($layout, header-height) - $height_header_top;
     }
     &.navigation--mobile-open {
       .navigation {
-        height: calc(100vh - #{$height_header});
+        max-height: 2000px;
       }
     }
   }
